Set a min height on the qstate display to prevent the animation from jumping around.

--- a/quantumAnimation.css
+++ b/quantumAnimation.css
@@ -51,6 +51,7 @@
 output.qstate {
     display: block;
     margin-left: 1em;
+    min-height: 3em;
 }
 
 [data-ng-cloak] {
